<resources>
    <string name="app_name">Eshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="categories">Categories</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="about_us">About Us</string>
    <string name="search_for_products">Search for products</string>
    <string name="up_to_73_off">Up To 73% Off</string>
    <string name="grocery_staples">Grocery &amp; Staples</string>
    <string name="category_desc">Pulses, Atta &amp; Other Flours, Rice &amp; Other Grains. Dry &amp; Nuts, Extra</string>
    <string name="enter_number">Enter Number</string>
    <string name="mobile_number_10_digit">Mobile Number (10-digit)</string>
    <string name="by_tapping_continue_i_agree_to_the_terms_of_use">By tapping continue, I agree to the Terms of Use</string>
    <string name="str_continue">Continue</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login">Login</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="otp_sent">OTP sent</string>
    <string name="otp_verified">OTP verified</string>
    <string name="otp_failed">OTP Failed</string>
    <string name="nearby">Nearby</string>
    <string name="title_activity_maps">Map</string>
    <string name="u20b9_293">₹ 293</string>
    <string name="add">ADD</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="add_shop">Add Shop</string>
    <string name="add_shop_ins">Please hold and press anywhere on the map to add your shop</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="shop_address">Shop Address</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="home_delivery">Do you have option of home delivery?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="proceed">Proceed</string>
    <string name="item_name">Item Name</string>
    <string name="item_category">Item Category</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity(500gm, 1kg, 2kg, 5kg)</string>
    <string name="add_image">Add Image</string>
    <string name="submit">Submit</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="add_more_items">Add More Items</string>
    <string name="h_p_petroleum">H.P. Petroleum</string>
    <string name="list_of_shop">List Of Shop</string>
    <string name="sell_your_items">Sell Your Items</string>
    <string name="discount">Discount(%)</string>
    <string name="checkout">CheckOut</string>
    <string name="amount">Amount</string>
</resources>