<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.maps.MapsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/add_shop_ins"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/add_shop_ins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:gravity="center"
        android:padding="@dimen/padding_8dp"
        android:text="@string/add_shop_ins"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/size_18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/list_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="48dp"
        android:onClick="onListClicked"
        android:text="@string/list_of_shop"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:backgroundTint="@color/colorOrange"
        app:icon="@drawable/ic_list"
        app:iconTint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/add_shop_ins"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_shop_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/add_shop"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:backgroundTint="@color/colorOrange"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@id/add_shop_ins"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>