<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_16dp"
    android:paddingTop="@dimen/padding_32dp"
    android:paddingEnd="@dimen/padding_16dp"
    android:paddingBottom="@dimen/padding_32dp">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/img_category"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_grocery"
        app:layout_constraintBottom_toBottomOf="@id/category_desc"
        app:layout_constraintEnd_toStartOf="@id/text_discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_discount" />

    <TextView
        android:id="@+id/text_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:gravity="start"
        android:text="@string/up_to_73_off"
        android:textAllCaps="true"
        android:textColor="@color/colorSkyBlue"
        android:textSize="@dimen/size_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_category"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="start"
        android:text="@string/grocery_staples"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/size_18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_category"
        app:layout_constraintTop_toBottomOf="@id/text_discount" />

    <TextView
        android:id="@+id/category_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/category_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_category"
        app:layout_constraintTop_toBottomOf="@id/text_category_name" />

</androidx.constraintlayout.widget.ConstraintLayout>